Fix the headline from wrapping

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 
 h1, h2, h3 {
     margin: 1em;
+    white-space: nowrap;
 }
 .Todo {
     color: #0000ff;
